# maniac_q

./: .gitignore  CMakeLists.txt  README.md  build.sh  maniac_q
include/: board.hpp  engine.hpp  game.hpp  is_valide_state.hpp  make_fence.hpp  make_move.hpp  move_check.hpp  parse_move.hpp  read_write.hpp  state.hpp  validation.hpp
src/: board.cpp  engine.cpp  game.cpp  is_valide_state.cpp  is_valide_state.h  main.cpp  make_fence.cpp  make_fence.hpp  make_move.cpp  move_check.cpp  move_check.h  parse_move.cpp  parse_move.hpp  read_write.cpp  read_write.hpp  state.cpp  state.h  state.hpp  validation.cpp
